完成AI推理模块的开发

--- a/PC/config.json
+++ b/PC/config.json
@@ -1,6 +1,7 @@
 {
-    "ip" : "127.0.0.1",
+    "ip" : "192.168.137.10",
     "port" : 5000,
-    "width" : 1280,
-    "height" : 720
+    "width" : 640,
+    "height" : 480,
+    "model_pt" : "./yolov10.pt"
 }
