--- a/PC/config.json
+++ b/PC/config.json
@@ -1,6 +1,7 @@
 {
     "ip" : "192.168.137.10",
-    "port" : 5000,
+    "video_port" : 5000,
+    "control_port" : 5001,
     "width" : 800,
     "height" : 600,
     "model_path" : "./yolov10.pt"
