加入自动控制逻辑

--- a/Auto_Move/config.json
+++ b/Auto_Move/config.json
@@ -6,17 +6,17 @@
     "height" : 480,
     "model_path" : "./yolov10n.pt",
     "object_label" :  {
-        "id": "label0",
+        "id": "obj_label",
         "hsv_range": {
             "lower": [
                 53.374375,
-                47.70125,
-                84.479375
+                40.70125,
+                80.479375
             ],
             "upper": [
                 93.374375,
-                147.70125000000002,
-                184.479375
+                150.70125000000002,
+                190.479375
             ]
         },
         "geo_info" : [
@@ -25,5 +25,34 @@
             [0.095, 0.095, 0.0],
             [0.0, 0.095, 0.0]
         ]
-    }
+    },
+    "map_label" : [
+        {
+            "id" : "map_label_1",
+            "hsv_range": {
+                "lower": [
+                    53.374375,
+                    40.70125,
+                    80.479375
+                ],
+                "upper": [
+                    93.374375,
+                    150.70125000000002,
+                    190.479375
+                ]
+            },
+            "geo_info" : [
+                [0.0, 0.0, 0.0],
+                [0.095, 0.0, 0.0],
+                [0.095, 0.095, 0.0],
+                [0.0, 0.095, 0.0]
+            ],
+            "position" : [
+                0.0,0.0,0.0
+            ],
+            "orientation" : [
+                0.0,0.0,0.0
+            ]       
+        }
+    ]
 }
